<resources>
    <string name="menu_title_preference">Preferenze</string>
    <string name="salva">Salva</string>
    <string name="internet_connection">L\'applicazione richiede la connessione ad internet per funzionare</string>
    <string name="search">Cerca</string>
    <string name="title_gicercagruppigenerale_activity">Unisciti a un gruppo</string>
    <string name="gruppi_studio_label">Gruppi di studio</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="app_name">StudyMate</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_data">User Data</string>
    <string name="tv_from_user_account">From user account:</string>
    <string name="tv_user_id">User ID</string>
    <string name="tv_from_ac_service">From AC service:</string>
    <string name="tv_attributes">Attributes</string>
    <string name="tv_from_profile_service">From profile service:</string>
    <string name="tv_name">Nome</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="remote_file_storage_demo_label">Remote file storage demo</string>
    <string name="photo_btn_label">Upload a photo!</string>
    <string name="title_activity_my_uni">StudyMate</string>
    <string name="action_settings">Opzioni</string>
    <string name="my_agenda_btn_label">Agenda</string>
    <string name="find_courses_btn_label">Ricerca corsi</string>
    <string name="phl_btn_label">Materiali</string>
    <string name="notices_btn_label">Notifiche</string>
    <string name="title_activity_notices">Notifiche</string>
    <string name="title_activity_my_agenda">Agenda</string>
    <string name="title_activity_phl">PHL</string>
    <string name="title_activity_find_courses">Ricerca corsi</string>
    <string name="title_activity_result_searched">Risultati della ricerca</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_courses">EVENTI PER CORSO</string>
    <string name="tab_home">TUTTI GLI EVENTI</string>
    <string name="tab_recensioni">RECENSIONI</string>
    <string name="libretto">Corsi da libretto:</string>
    <string name="interesse">Corsi di interesse:</string>
    <string name="find_dipartimento">Dipartimento:</string>
    <string name="title_activity_find_recensioni"> Cerca Recensioni</string>
    <string name="find_recensioni_per">Recensioni per: MATERIA</string>
    <string name="rate">Vota!</string>
    <string name="title_activity_find_home_course">FindHomeCourse</string>
    <string name="rating">Voto medio del corso:</string>
    <string name="title_activity_dati">Dati</string>
    <string name="my_courses">Corsi che seguo</string>
    <string name="title_activity_search_home">Ricerca dei corsi</string>
    <string name="title_shared_studente">Informazioni studente</string>
    <string name="choose_data">Data:</string>
    <string name="choose_time">Ora:</string>
    <string name="add_event_corsi">Corso:</string>
    <string name="tab_PHL">PHL</string>
    <string name="tab_moodle">MOODLE</string>
    <string name="search_label_department"> Dipartimento </string>
    <string name="search_label_courseDegree"> Corso di laurea </string>
    <string name="search_label_course"> Corso </string>
    <string name="search_button_search"> Ricerca </string>
    <string name="search_hint_course"> Nome del corso </string>
    <string name="search_label_searchedList">Hai cercato:</string>
    <string name="find_label_searchingnow">"Stai cercando: "</string>
    <string name="find_label_searching">"Cerca un corso: "</string>
    <string name="finder_initiallist_dep"> Seleziona Dipartimento </string>
    <string name="finder_initiallist_deg"> Seleziona corso di laurea </string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="add_event">Aggiungi evento</string>
    <string name="agenda_label_tab_overview">Overview</string>
    <string name="notices_string_titlelist"></string>
    <string name="notices_string_titlelistExist">Lista aggiornata al: </string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="monitor">Segnalazioni attive</string>
    <string name="title_activity_add_event">Aggiungi evento</string>
    <string name="title_activity_rate">Vota!</string>
    <string name="tab_home_course">Home</string>
    <string name="tab_feedback">Recensioni</string>
    <string name="feedback_title_of_list">Recensioni per:</string>
    <string name="textview_description_label">Descrizione:</string>
    <string name="add_rating_feedback_button">Aggiungi commento</string>
    <string name="label_title_description_course">Descrizione</string>
    <string name="label_txtMonitor_on">Segnalazioni attive</string>
    <string name="label_txtMonitor_off">Segnalazioni non attive</string>
    <string name="rating_context_contenuti">Contenuti</string>
    <string name="rating_contextExplain_contenuti">Gli argomenti trattati ti hanno soddisfatto?</string>
    <string name="rating_context_carico_studio">Carico di studio/cfu</string>
    <string name="rating_contextExplain_carico_studio">Il carico di studio è proporzionato con i cfu?</string>
    <string name="rating_context_lezioni">Lezioni</string>
    <string name="rating_contextExplain_lezioni">Le lezioni sono state esaurienti?</string>
    <string name="rating_context_materiali">Materiali</string>
    <string name="rating_contextExplain_materiali">I materiali forniti sono adatti ai fini dell\'esame?</string>
    <string name="rating_context_esame">Esame</string>
    <string name="rating_contextExplain_esame">L\'esame è coerente agli argomenti trattati?</string>
    <string name="title_activity_work_in_progress">WorkInProgress</string>
    <string name="rating_text_icon">Vota</string>
    <string name="title_activity_lista__gds_activity">Lista_GDS_activity</string>
    <string name="title_activity_overview__gds">Overview_GDS</string>
    <string name="title_activity_add_attivita_studio_activity">Add_attivita_studio_activity</string>
    <string name="title_activity_crea__gds_activity">Crea_GDS_activity</string>
    <string name="toast_switchfollow_error">Errore! La richiesta non è andata a buon fine. </string>
    <string name="toast_switchfollow_success"> Stai seguendo questo corso. </string>
    <string name="toast_rate_access_denied"> Non puoi votare questo corso, prima devi passare l\'esame. </string>
    <string name="toast_switchfollow_off"> Non segui più questo corso </string>
    <string name="Monday">Lunedì</string>
    <string name="Tuesday">Martedi</string>
    <string name="Wednesday">Mercoledì</string>
    <string name="Thursday">Giovedì</string>
    <string name="Friday">Venerdì</string>
    <string name="Saturday">Sabato</string>
    <string name="Sunday">Domenica</string>
    <string name="January">Gennaio</string>
    <string name="February">Febbraio</string>
    <string name="March">Marzo</string>
    <string name="April">Aprile</string>
    <string name="May">Maggio</string>
    <string name="June">Giugno</string>
    <string name="July">Luglio</string>
    <string name="August">Agosto</string>
    <string name="September">Settembre</string>
    <string name="October">Ottobre</string>
    <string name="November">Novembre</string>
    <string name="December">Dicembre</string>
    <string name="of">di</string>
    <string name="header_course_career">Corsi da libretto</string>
    <string name="header_course_interest">Corsi di interesse</string>
    <string name="dialog_gds_associated_loading">Caricamento gruppi di studio associati</string>
    <string name="dialog_coming_soon">Disponibile a breve</string>
    <string name="dialog_sync_data">Sincronizzazione dei dati personali in corso</string>
    <string name="dialog_loading">Caricamento...</string>
    <string name="dialog_error">Ops! C\'è stato un errore...</string>
    <string name="dialog_error_old_course">Ops! C\'è stato un errore. Il corso che vuoi votare potrebbe non esistere più</string>
    <string name="dialog_courses_events">Lista dei corsi registrati agli eventi</string>
    <string name="dialog_list_events">Lista dei tuoi eventi</string>
    <string name="dialog_list_courses">Lista dei tuoi corsi</string>
    <string name="dialog_list_cds">Lista dei corsi di laurea</string>
    <string name="dialog_not_events">Non ci sono eventi prossimamente</string>
    <string name="dialog_searching_courses">Ricerca dei corsi</string>
    <string name="dialog_searching_list_departments">Lista dei dipartimenti</string>
    <string name="dialog_rate_loading_feedback">Caricamento dei dati della tua recensione</string>
    <string name="dialog_saving_feedback">Salvataggio in corso</string>
    <string name="dialog_follow_list_courses_career">Lista dei corsi da libretto</string>
    <string name="dialog_waiting_goto_home">Reindirizzamento alla home del corso</string>
    <string name="dialog_error_redirect">Errore! Non è possibile raggiungere la home del corso</string>
    <string name="dialog_error_delete">Errore! Non è possibile eliminare il corso dalla lista</string>
    <string name="dialog_success_delete">Corso eliminato dalla lista</string>
    <string name="invalid_career">"Non stai seguendo alcun corso</string>
    <string name="no_vote">Non puoi valutare nessun corso</string>
    <string name="dialog_shared_title_dip">Seleziona il tuo dipartimento</string>
    <string name="dialog_shared_title_cds">Seleziona il tuo corso di laurea</string>
    <string name="dialog_shared_data_loading">Caricamento della lista dei dipartimenti e dei corsi di laurea</string>
    <string name="dialog_saved_pref">Informazioni salvate con successo</string>
    <string name="no_events_now">Non sono disponibli eventi a breve per questo corso</string>
    <string name="attivitadistudio_string">Attività di studio</string>
    <string name="sure_group_stud">Conferma iscrizione</string>
    <string name="attivita_string">Attivita\'</string>
    <string name="toast_event_added">Evento personale aggiunto</string>
    <string name="toast_gds_no_find_to_subscribe">Non puoi iscriverti a nessun gruppo</string>
    <string name="toast_gds_no_gds_course">Non sono presenti gruppi per questa attività</string>
    <string name="toast_gds_select_course">Seleziona un corso</string>
    <string name="toast_gds_no_courses_followed">Non puoi iscriverti ad alcun gruppo di studio</string>
    <string name="addevent_title">Titolo</string>
    <string name="addevent_courses">Corsi</string>
    <string name="addevent_date">Data</string>
    <string name="addevent_Time">Ora</string>
    <string name="addevent_description">Descrizione</string>
    <string name="button_cancel">Annulla</string>
    <string name="searchby_all">Tutti</string>
    <string name="event_modify_not_allowed">Solo chi ha creato l\'evento può modificarlo</string>
    <string name="event_delete_not_allowed">Solo chi ha creato l\'evento può eliminarlo</string>
    <string name="mod_att">Modifica attività di studio</string>
    <string name="feedback_not_present">Non sono presenti commenti...</string>
    <string name="feedback_number_presents">commenti presenti</string>
    <string name="feedback_number_presents_for_1">1 commento presente</string>
    <string name="feedback_course_information">Informazioni del corso</string>
    <string name="feedback_course_is_career">Il corso è da libretto</string>
    <string name="feedback_courses_can_review">Corsi che posso votare</string>
    <string name="rate_review_course">Valuta</string>
    <string name="rate_insert_review">Inserisci un commento...</string>
    <string name="rate_review_added">Valutazione aggiunta!</string>
    <string name="menu_add_group">Crea gruppo</string>
    <string name="label_participants">Partecipanti:</string>
	<string name="gds_materia">Materia:</string>
	<string name="gds_name_of">Nome del gruppo:</string>
	<string name="gds_unjoin">Abbandona gruppo</string>
</resources>